[tool.poetry]
name = "aiorezka"
version = "1.1.0"
description = ""
authors = ["iYasha <33287747+iYasha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
aiohttp = "^3.9.1"
faker = "^20.1.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
